Fix white spaces between snake parts

--- a/src/components/gameboard/Block.module.css
+++ b/src/components/gameboard/Block.module.css
@@ -4,7 +4,6 @@
 
 .block {
   background-color: var(--c-gray-6);
-  border: 1px solid var(--c-gray-6);
   position: absolute;
   top: 0;
   left: 0;
